App: fix overflow, autoload

--- a/src/components/App.sass
+++ b/src/components/App.sass
@@ -6,3 +6,4 @@ main
   padding: 1em
   margin: 0 auto
   border: 8px dashed cyan
+  overflow: auto
